[tool.poetry]
name = "falldetection"
version = "0.1.0"
description = "Fall detection and impact prediction system."
authors = ["mrkaraaslan <developerkaraaslan@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "3.9"
numpy = "^1.21.5"
opencv-python = "^4.5.5"
matplotlib = "^3.5.1"
mediapipe = "^0.8.9"
keras = "^2.7.0"
tensorflow = "^2.7.0"
sklearn = "^0.0"

[tool.poetry.dev-dependencies]
ipython = "^7.30.1"
ipykernel = "^6.6.0"
pandas = "^1.3.5"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
